--- a/index.html
+++ b/index.html
@@ -2157,7 +2157,7 @@
                 <div class="footer-section">
                     <h3>AUTOSTART</h3>
                     <p>IoT solutions.</p>
-                    <p>📧 hello@autostart.io</p>
+                    <p>📧 sales@autostart.au</p>
                     <p>Sales:</p>
                     <p>📞 +61 0406 162 755</p>
                 </div>
