--- a/index.html
+++ b/index.html
@@ -1568,6 +1568,14 @@
             opacity: 1;
             transform: translateY(0);
         }
+        footer a {
+            color: inherit;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -2157,7 +2165,7 @@
                 <div class="footer-section">
                     <h3>AUTOSTART</h3>
                     <p>IoT solutions.</p>
-                    <p>📧 info@autostart.au</p>
+                    <a href="mailto:info@autostart.au?subject=Inquiry&body=Hello, I would like to know more about your IoT solutions.">info@autostart.au</a>
                     <p>Sales:</p>
                     <p>📞 +61 0406 162 755</p>
                 </div>
