--- a/index.html
+++ b/index.html
@@ -1586,6 +1586,7 @@
                 <div class="brand-text">
                     <div class="brand-name">AUTOSTART</div>
                     <div class="brand-tagline">IoT Integration & Automation</div>
+                    <div class="brand-tagline">info@autostart.au</div>
                 </div>
             </div>
             <ul class="nav-links">
