--- a/index.html
+++ b/index.html
@@ -2077,6 +2077,7 @@
                     <ul class="plan-features">
                         <li>Unlimited Devices</li>
                         <li>All festures of Free plan</li>
+                        <li>Incuded consultation on internet security</li>
                         <li>Enhanced visual dashboars</li>
                         <li>Control your home from anywhare. One time Private VPN setup.</li>
                     </ul>
