--- a/index.html
+++ b/index.html
@@ -2079,7 +2079,7 @@
                         <li>All festures of Free plan</li>
                         <li>Incuded consultation on internet security</li>
                         <li>Enhanced visual dashboars</li>
-                        <li>Control your home from anywhare. One time Private VPN setup.</li>
+                        <li>Control your home from anywhere. Get a one-time private VPN setup with total privacy—the VPN runs directly from your home to your phone.</li>
                     </ul>
                     
                     <button class="plan-button btn-primary">Contact Sales</button>
