--- a/index.html
+++ b/index.html
@@ -2076,7 +2076,7 @@
                     
                     <ul class="plan-features">
                         <li>Unlimited Devices</li>
-                        <li>All festures of Free plan</li>
+                        <li>All features of Free plan</li>
                         <li>Incuded consultation on internet security</li>
                         <li>Enhanced visual dashboars</li>
                         <li>Control your home from anywhere. Get a one-time private VPN setup with total privacy—the VPN runs directly from your home to your phone.</li>
