--- a/index.html
+++ b/index.html
@@ -1992,11 +1992,11 @@
                     </div>
                     
                     <ul class="plan-features">
-                        <li>Control Graage Doors</li>
+                        <li>Control Garage Doors</li>
                         <li>Capable of displaying following Sensors</li>
                         <li>Motion Sensor</li>
-                        <li>Tempreature</li>
-                        <li>Humitdity</li>
+                        <li>Temperature</li>
+                        <li>Humidity</li>
                         <li>Barometer</li>
                         <li>Air Quality</li>
                     </ul>
