--- a/index.html
+++ b/index.html
@@ -2618,5 +2618,22 @@
             }
         });
     </script>
+
+    <script>
+    (function(d,t) {
+        var BASE_URL="https://chat.autostart.au";
+        var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+        g.src=BASE_URL+"/packs/js/sdk.js";
+        g.async = true;
+        s.parentNode.insertBefore(g,s);
+        g.onload=function(){
+        window.chatwootSDK.run({
+            websiteToken: 'poJdhCcqAqNNEM2s4MgebZMX',
+            baseUrl: BASE_URL
+        })
+        }
+    })(document,"script");
+    </script>
+    
 </body>
 </html>
