--- a/index.html
+++ b/index.html
@@ -2619,6 +2619,7 @@
         });
     </script>
 
+    <!-- chat -->
     <script>
     (function(d,t) {
         var BASE_URL="https://chat.autostart.au";
@@ -2634,6 +2635,10 @@
         }
     })(document,"script");
     </script>
-    
+
+    <!-- analytics -->
+    <script defer data-domain="autostart.au" src="https://analytics.autostart.au/js/script.file-downloads.outbound-links.revenue.tagged-events.js"></script>
+    <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+ 
 </body>
 </html>
