--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AUTOSTART - IoT Integration & Automation Solutions</title>
+    <!-- google logo -->
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Autostart",
+        "url": "https://autostart.au",
+        "logo": "https://autostart.au/img/logo_standard-plain.png",
+        "description": "AUTOSTART - IoT Integration & Automation Solutions",
+        "areaServed": {
+            "@type": "City",
+            "name": "Melbourne"
+        }
+        }
+    </script>
     <style>
         * {
             margin: 0;
