--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>AUTOSTART - IoT Integration & Automation Solutions</title>
     <link rel="icon" type="image/png" href="img/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="shortcut icon" href="img/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png" />
     <link rel="manifest" href="img/site.webmanifest" />
     <!-- google logo -->
